--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/sunjianxin"
+  github           : "sunjianxin"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -72,8 +72,8 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : # Username
-  zhihu            : # Username
+  youtube          : "UCczFSVzoEk2FHofZ5YzG52A" # Username
+  zhihu            : "dream191919" # Username
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
