--- a/_config.yml
+++ b/_config.yml
@@ -67,13 +67,13 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "dream191919" # Username for X / Twitter
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : "UCczFSVzoEk2FHofZ5YzG52A" # Username
-  zhihu            : "dream191919" # Username
+  youtube          : "dream191919" # Username
+  zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
