--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Jianxin (Jason) Sun"
   pronouns         : # example: "she/her"  
   bio              : "Research Assistant Professor"
-  location         : "US, Nebraska"
+  location         : "217 Schorr Center"
   employer         : "University of Nebraska-Lincoln"
   uri              : # URL
   email            : "sunjianxin66@gmail.com" 
