--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /teaching/
 
   - title: "Service"
-    url: /service/
+    url: /portfolio/
     
   # - title: "Portfolio"
   #   url: /portfolio/
