--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,9 @@ main:
 
   - title: "Service"
     url: /portfolio/
+
+  - title: "Outreach"
+    url: /year-archive/
     
   # - title: "Portfolio"
   #   url: /portfolio/
